@@ -460,6 +460,7 @@ Sandbox::Sandbox(int& argc,char**& argv,char**& appDefaults)
 	bool renderWaterSurface=false;
 	double rainElevationMin=-1000.0;
 	double rainElevationMax=1000.0;
+	double evaporationRate=0.0;
 	for(int i=1;i<argc;++i)
 		{
 		if(argv[i][0]=='-')
@@ -545,6 +546,11 @@ Sandbox::Sandbox(int& argc,char**& argv,char**& appDefaults)
 				++i;
 				rainStrength=GLfloat(atof(argv[i]));
 				}
+			else if(strcasecmp(argv[i]+1,"evr")==0)
+				{
+				++i;
+				evaporationRate=atof(argv[i]);
+				}
 			else if(strcasecmp(argv[i]+1,"fpv")==0)
 				fixProjectorView=true;
 			else if(strcasecmp(argv[i]+1,"hs")==0)
@@ -611,6 +617,9 @@ Sandbox::Sandbox(int& argc,char**& argv,char**& appDefaults)
 		std::cout<<"  -rs <rain strength>"<<std::endl;
 		std::cout<<"     Sets the strength of global or local rainfall in cm/s"<<std::endl;
 		std::cout<<"     Default: 0.25"<<std::endl;
+		std::cout<<"  -evr <evaporation rate>"<<std::endl;
+		std::cout<<"     Water evaporation rate in cm/s"<<std::endl;
+		std::cout<<"     Default: 0.0"<<std::endl;
 		std::cout<<"  -fpv"<<std::endl;
 		std::cout<<"     Fixes the navigation transformation so that Kinect camera and"<<std::endl;
 		std::cout<<"     projector are aligned, as defined by the projector calibration file"<<std::endl;
@@ -790,6 +799,7 @@ Sandbox::Sandbox(int& argc,char**& argv,char**& appDefaults)
 	/* Initialize the water flow simulator: */
 	waterTable=new WaterTable2(wtSize[0],wtSize[1],basePlane,basePlaneCorners);
 	waterTable->setElevationRange(elevationMin,rainElevationMax);
+	waterTable->setWaterDeposit(evaporationRate);
 	
 	/* Register a render function with the water table: */
 	addWaterFunction=Misc::createFunctionCall(this,&Sandbox::addWater);
